@@ -60,9 +60,9 @@ public class ProjectProcessStepEventController {
   public ResponseEntity<Object> savePpsEventDetails(
     @PathVariable Long ppsId, @PathVariable Long eventId, @RequestBody SaveEventRequest saveEvent, @PathVariable Optional<Boolean> forceSave)
     throws Exception {
-    if(forceSave.isPresent() && !forceSave.get()){
+    if (forceSave.isPresent() && !forceSave.get()) {
       List<ScheduleEvent> conflictList = projectProcessStepEventService.checkForSchedulingConflict(saveEvent, ppsId);
-      if(conflictList != null && conflictList.size() > 0){
+      if (conflictList != null && conflictList.size() > 0) {
         return new ResponseEntity(conflictList, HttpStatus.CONFLICT);
       }
     }
@@ -105,6 +105,17 @@ public class ProjectProcessStepEventController {
       HttpStatus.OK);
   }
 
+  @PostMapping(value = "/{projectProcessStepEventId}/attachmentss")
+  public ResponseEntity<List<Attachment>> uploadMultipleProjectProcessStepEventAttachment(
+    @PathVariable Long projectProcessStepEventId,
+    @RequestParam Long attachmentTypeId,
+    @RequestParam("files") MultipartFile[] files)
+    throws IOException {
+
+    return new ResponseEntity<>(
+      projectProcessStepEventService.addAttachments(files, projectProcessStepEventId, attachmentTypeId), HttpStatus.OK);
+  }
+
   // action
 
   @PostMapping(
@@ -116,10 +127,10 @@ public class ProjectProcessStepEventController {
     @PathVariable Long actionId,
     @RequestBody SaveEventRequest saveEvent) {
     try {
-      if(actionId == 1){
-        if(saveEvent.getForceSave() != null && !saveEvent.getForceSave()){
+      if (actionId == 1) {
+        if (saveEvent.getForceSave() != null && !saveEvent.getForceSave()) {
           List<ScheduleEvent> conflictList = projectProcessStepEventService.checkForSchedulingConflict(saveEvent, ppsId);
-          if(conflictList != null && conflictList.size() > 0){
+          if (conflictList != null && conflictList.size() > 0) {
             return new ResponseEntity(conflictList, HttpStatus.CONFLICT);
           }
         }
@@ -141,16 +152,14 @@ public class ProjectProcessStepEventController {
       Optional<ProjectProcessStepEvent> ppsEvent = getPpsEvent(ppsId, ppseActionResult.getPpsEventId());
 
       //add in the child function returned strings
-      if(ppsEvent.isPresent()) {
-        ppsEvent.get().setChildFunctionReturnedStrings(ppseActionResult.getChildFunctionReturnedStrings());
-      }
+      ppsEvent.ifPresent(projectProcessStepEvent -> projectProcessStepEvent.setChildFunctionReturnedStrings(ppseActionResult.getChildFunctionReturnedStrings()));
 
       return ResponseEntity.ok(ppsEvent);
     } catch (Exception e) {
       User currentUser = securityService.getCurrentUser();
       final String errMessage =
-        String.format(
-          "PPSE: Unable to MANUALLY trigger action ID: %s, PPS EVENT ID: %s, BY USER: %s *** %s",
+
+          "PPSE: Unable to MANUALLY trigger action ID: %s, PPS EVENT ID: %s, BY USER: %s *** %s".formatted(
           actionId, eventId, currentUser.trueUserId(), e.getMessage());
       log.error(errMessage);
       throw new ResponseStatusException(HttpStatus.CONFLICT, errMessage, e);
