@@ -116,6 +116,17 @@ public class ProjectProcessStepService {
     sqlCache.updateBySql(sql, params);
   }
 
+  public List<Attachment> addAttachments(MultipartFile[] files, Long projectProcessStepId, Long attachmentTypeId) throws IOException {
+    List<Attachment> results = new ArrayList<>();
+    Attachment a;
+    for(MultipartFile file : files) {
+      a = addAttachment(file, projectProcessStepId, attachmentTypeId, file.getOriginalFilename());
+      results.add(a);
+    }
+
+    return results;
+  }
+
   // @TODO: this needs to work better with the attachment service's create method. Too much duped code right now and I hate it
   public Attachment addAttachment(MultipartFile file, Long projectProcessStepId, Long attachmentTypeId, String displayName) throws IOException {
     User user = securityService.getCurrentUser();
@@ -492,7 +503,7 @@ public class ProjectProcessStepService {
     for (Map<String, Object> result : results) {
       cronUser.setCompanyId(Long.valueOf(result.get("companyId").toString()));
       try {
-        log.info(String.format("TRIGGERS: Starting #%s for ppsId: %s", counter++, result.get("ppsId")));
+        log.info("TRIGGERS: Starting #%s for ppsId: %s".formatted(counter++, result.get("ppsId")));
         PpsActionResult ppsActionResult = performAutoTriggerActions(Long.valueOf(result.get("ppsId").toString()), new UserAccountDetails(cronUser, Collections.emptyList()));
         if (!ppsActionResult.getPpsIds().isEmpty()) {
           createdPpsIds.addAll(ppsActionResult.getPpsIds());
@@ -1442,10 +1453,10 @@ public class ProjectProcessStepService {
           passed = !intersection.isEmpty();
           break;
         default:
-          throw new Exception(String.format("Unable to parse multiselect data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse multiselect data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare multiselect values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare multiselect values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
     return passed;
   }
@@ -1517,10 +1528,10 @@ public class ProjectProcessStepService {
           passed = !Objects.equals(number, compareNumber);
           break;
         default:
-          throw new Exception(String.format("Unable to parse dropdown data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse dropdown data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare dropdown values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare dropdown values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1595,10 +1606,10 @@ public class ProjectProcessStepService {
           passed = (number != null && compareNumber != null) && number < compareNumber;
           break;
         default:
-          throw new RuntimeException(String.format("Unable to parse int data type, operator of ID: %s", operatorTypeId));
+          throw new RuntimeException("Unable to parse int data type, operator of ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare int values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare int values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1677,10 +1688,10 @@ public class ProjectProcessStepService {
         case 4:
           break;
         default:
-          throw new RuntimeException(String.format("Unable to parse text data type, operator ID: %s", operatorTypeId));
+          throw new RuntimeException("Unable to parse text data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare text values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare text values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1756,10 +1767,10 @@ public class ProjectProcessStepService {
           passed = (number != null && compareNumber != null) && number < compareNumber;
           break;
         default:
-          throw new Exception(String.format("Unable to parse numeric data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse numeric data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare numeric values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare numeric values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1888,10 +1899,10 @@ public class ProjectProcessStepService {
         case 4:
           break;
         default:
-          throw new Exception(String.format("Unable to parse null timestamp data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse null timestamp data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare null timestamp values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare null timestamp values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1913,10 +1924,10 @@ public class ProjectProcessStepService {
         case 4:
           break;
         default:
-          throw new Exception(String.format("Unable to parse non null timestamp data type, operator of ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse non null timestamp data type, operator of ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare non null timestamp values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare non null timestamp values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -1941,10 +1952,10 @@ public class ProjectProcessStepService {
           passed = date != null && date.isBefore(compareDate);
           break;
         default:
-          throw new Exception(String.format("Unable to parse timestamp data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse timestamp data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare timestamp values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare timestamp values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -2017,10 +2028,10 @@ public class ProjectProcessStepService {
         case 4:
           break;
         default:
-          throw new Exception(String.format("Unable to parse non null date data type, operator ID: %s", operatorTypeId));
+          throw new Exception("Unable to parse non null date data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare non null date values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare non null date values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -2043,10 +2054,10 @@ public class ProjectProcessStepService {
           passed = false;
           break;
         default:
-          throw new RuntimeException(String.format("Unable to parse null date data type, operator ID: %s", operatorTypeId));
+          throw new RuntimeException("Unable to parse null date data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare null date values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare null date values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
@@ -2079,10 +2090,10 @@ public class ProjectProcessStepService {
           passed = date != null && date.isBefore(compareDate.toLocalDateTime());
           break;
         default:
-          throw new RuntimeException(String.format("Unable to parse date data type, operator ID: %s", operatorTypeId));
+          throw new RuntimeException("Unable to parse date data type, operator ID: %s".formatted(operatorTypeId));
       }
     } catch (Exception e) {
-      throw new RuntimeException(String.format("Unable to compare date values, operator ID: %s *** %s", operatorTypeId, e.getMessage()));
+      throw new RuntimeException("Unable to compare date values, operator ID: %s *** %s".formatted(operatorTypeId, e.getMessage()));
     }
 
     return passed;
